<resources>
    <string name="app_name">ChatWing WhiteLB</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_login">"Log In"</string>
    <string name="title_categories">"Lobby"</string>
    <string name="title_activity_conversation">Conversations</string>
    <string name="title_activity_admins">Admin Contacts</string>
    <string name="title_activity_online_users">Online Users</string>
    <string name="title_settings">"Settings"</string>
    <string name="fragment_tag_left_drawer">"left-drawer-fragment"</string>
    <string name="error_failed_to_update_user_profile">"Failed to update user profile."</string>
    <string name="error_cant_handle_email">"Your Email application can't handle this email. Did you set it up?"</string>
    <string name="error_invalid_name_length">"Name must be a string from 3 to 32 characters"</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="message_or">or</string>
    <string name="fragment_tag_settings">"settings-fragment"</string>
    <string name="fragment_tag_online_user">"online-user-fragment"</string>
    <string name="fragment_tag_ads">"ads-fragment"</string>
    <string name="title_from_camera">"Take a photo"</string>
    <string name="title_from_gallery">"Choose from library"</string>
    <string name="title_login_chatwing">"Log In with %s"</string>
    <string name="title_login_fb">"Log In with Facebook"</string>
    <string name="title_login_google_plus">"Log In with Google"</string>
    <string name="title_login_tumblr">"Log In with Tumblr"</string>
    <string name="title_login_twitter">"Log In with Twitter"</string>
    <string name="title_login_yahoo">"Log In with Yahoo!"</string>
    <string name="title_login_guest">"Log In as Guest"</string>
    <string name="title_chat_boxes_drawer_search">Search for a chat box</string>
    <string name="title_chat_boxes_drawer_create">Create a chat box</string>
    <string name="title_bookmarks">"Bookmarks"</string>
    <string name="title_bookmark_current_chat_box">"Bookmark"</string>
    <string name="hint_search_chat_box">"Search chat boxes by name"</string>
    <string name="hint_email">"Email"</string>
    <string name="hint_password">"Password"</string>
    <string name="title_forgot_password">"Forgot password"</string>
    <string name="error_invalid_email">"Email is invalid."</string>
    <string name="error_invalid_password">"Password is invalid."</string>
    <string name="error_failed_to_save_bookmark">"There was an error while bookmarking your chatbox"</string>
    <string name="progress_sending">"Sending…"</string>
    <string name="progress_logging_in">"Logging in…"</string>
    <string name="progress_getting_access_token">"Getting access token…"</string>
    <string name="progress_creating_chat_box">"Creating…"</string>
    <string name="progress_searching">"Searching…"</string>
    <string name="error_unavailable_google_plus_login">"Log in with Google is unavailable."</string>
    <string name="error_invalid_guest_name">"Guest name must be filled"</string>
    <string name="hint_guest_name">"Guest 123"</string>
    <string name="title_choose_guest_avatar">Choose Guest Avatar</string>
    <string name="progress_loading_url">"Loading…"</string>
    <string name="progress_loading_settings">"Loading settings..."</string>
    <string name="progress_getting_request_token">"Getting request token…"</string>
    <string name="title_reset_password">"Reset Password"</string>
    <string name="title_register">Register</string>
    <string name="title_show_password">"Show password"</string>
    <string name="title_auto_create_chatbox">"Automatically create the first chatbox after signing up"</string>
    <string name="title_delete_chat_message">"Delete"</string>
    <string name="title_block">"Block"</string>
    <string name="message_agree_conditions">"By creating an account, you are agreeing to our <a href="http://chatwing.com/site/tos">Terms of Service</a> and <a href="http://chatwing.com/site/privacy">Privacy Policy</a></string>
    <string name="message_current_chat_box_alias_copied">"Alias Copied"</string>
    <string name="message_avatar_picker">Avatar Picker</string>
    <string name="title_register_chatwing">"Sign Up"</string>
    <string name="error_invalid_username_password">"Email or Password is invalid."</string>
    <string name="error_app_invalid_username_password">"Email or Password is invalid or you are not allowed to join. Please contact app admin"</string>
    <string name="progress_registering">"Signing up…"</string>
    <string name="title_register_fb">"Sign Up using Facebook"</string>
    <string name="title_register_google_plus">"Sign Up using Google"</string>
    <string name="title_register_tumblr">"Sign Up using Tumblr"</string>
    <string name="title_register_twitter">"Sign Up using Twitter"</string>
    <string name="title_register_yahoo">"Sign Up using Yahoo"</string>
    <string name="title_cancel">Cancel</string>
    <string name="title_btn_create_chat_box">"Create"</string>
    <string name="title_menu_search_chat_box">"Search a chat box"</string>
    <string name="title_delete_bookmark">"Delete"</string>
    <string name="empty_bookmarks">"No bookmarked chat boxes."</string>
    <string name="empty_search_chat_box_results">"No chat boxes with name \"%s\" found."</string>
    <string name="empty_search_chat_box_query">"Let's start searching chat boxes by name."</string>
    <string name="error_required_chat_wing_login">"You need to login with a ChatWing account to use these awesome features."</string>
    <string name="error_required_chat_wing_login_to_create_chat_boxes">"You need to login with a ChatWing account to create chat boxes."</string>
    <string name="error_blank_chatbox">"Chatbox cannot be blank"</string>
    <string name="error_required_agree_conditions">"You must read and agree the Terms of Service and License"</string>
    <string name="error_block_user_no_permission">"You do not have permission to block user."</string>
    <string name="error_delete_message_no_permission">"You do not have permission to delete messages."</string>
    <string name="error_no_permission">"You do not have permission to do this."</string>
    <string name="error_ignore_message_no_permission">"You can't ignore this message"</string>
    <string name="error_flag_message_no_permission">"You can't flag this message"</string>
    <string name="error_duration_cant_blank">"Duration must be numeric and greater than 0."</string>
    <string name="error_invalid_chat_box_id">"Chat box id is invalid."</string>
    <string name="error_require_permission_to_view_ip">"You dont have permission to block user"</string>
    <string name="error_while_blocking_user">"There was an error while blocking user."</string>
    <string name="error_while_deleting_bookmark">"There was an error while deleting bookmark."</string>
    <string name="error_while_loading_messages">"There was an error while loading message."</string>
    <string name="error_account_not_found">"Account not found. Please select another one"</string>
    <string name="error_while_creating_chatbox">"There was an error while creating chatbox."</string>
    <string name="error_failed_to_save_chat_box">"Failed to save the chat box"</string>
    <string name="title_block_type">"Block %s"</string>
    <string name="title_block_ip">"Block IP"</string>
    <string name="title_activity_login">"Log In"</string>
    <string name="title_activity_register">"Sign Up"</string>
    <string name="title_online_users">"Online users"</string>
    <string name="title_share_chat_box">"Share chat box"</string>
    <string name="title_copy_alias_current_chat_box">"Copy Alias Link"</string>
    <string name="title_activity_user_profile_preference">"Settings"</string>
    <string name="title_preference_category_chat_boxes">Chat boxes</string>
    <string name="title_preference_category_extras">Extras</string>
    <string name="title_preference_name">"Name"</string>
    <string name="title_preference_email">"Email"</string>
    <string name="email_verified">"Email's verified"</string>
    <string name="email_not_verified">"Email's not verified. Verify Now"</string>
    <string name="email_not_found">"Email's not found"</string>
    <string name="title_preference_feedback">Send feedback</string>
    <string name="title_preference_version">Version</string>
    <string name="title_preference_play_new_message_sound">"Enable Sound"</string>
    <string name="title_preference_remember_previous_style">"Remember previous style"</string>
    <string name="title_preference_clear_previous_style">"Clear previous style"</string>
    <string name="title_manage_blacklist">"Manage BlackList"</string>
    <string name="title_refresh">"Refresh"</string>
    <string name="title_open_in_browser">"Open in Browser"</string>
    <string name="title_activity_walkthrough">"Welcome"</string>
    <string name="summary_play_new_message_sound">"Play sound when new message arrived."</string>
    <string name="summary_remember_previous_style">"Remember style of previous chat and apply to new ones."</string>
    <string name="summary_name">"Your name that is displayed in chat boxes."</string>
    <string name="summary_email">"Your email that will receive notification"</string>
    <string name="message_bookmarks_selected">" selected"</string>
    <string name="message_blocked">"Blocked"</string>
    <string name="message_share_chat_box_subject">"Join me in this chat box"</string>
    <string name="message_hint_block_reason">"You have been banned"</string>
    <string name="message_hint_block_duration">3600</string>
    <string name="message_block_clear_message">"Clear messages"</string>
    <string name="message_block_user">"Block User"</string>
    <string name="message_walkthrough_page_1_main_text"></string>
    <string name="message_walkthrough_page_1_secondary_text">"Your new way of communicating with people across the globe"</string>
    <string name="message_walkthrough_page_2_main_text">"Login options"</string>
    <string name="message_walkthrough_page_2_secondary_text">"Enable the login methods to allow in your room"</string>
    <string name="message_walkthrough_page_3_main_text">"Connectivity"</string>
    <string name="message_walkthrough_page_3_secondary_text">"Start group chat or private chat connected anywhere"</string>
    <string name="message_walkthrough_page_4_main_text">"Invitation"</string>
    <string name="message_walkthrough_page_4_secondary_text">"Invite your friends through social sharing"</string>
    <string name="message_walkthrough_page_5_main_text">"Customizations"</string>
    <string name="message_walkthrough_page_5_secondary_text">"Over 200 customizable options when creating a room"</string>
    <string name="title_ignore">Ignore/Unignore</string>
    <string name="title_flag">Flag</string>
    <string name="hint_chat_box_name">"Name (optional)"</string>
    <string name="title_create_entered_chat_box">"Create it"</string>
    <string name="ic_bold">\ue454</string>
    <string name="ic_italic">\ue456</string>
    <string name="ic_underline">\ue455</string>
    <string name="ic_strikethrough">\ue457</string>
    <string name="ic_color">\ue461</string>
    <string name="ic_background_color">\ue462</string>
    <string name="ic_img">\ue02c</string>
    <string name="ic_video">\ue04a</string>
    <string name="ic_url">\ue2c9</string>
    <string name="ic_email">\ue046</string>
    <string name="description_cancel">Cancel</string>
    <string name="push_notification">Push</string>
    <string name="email_notification">Email</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="title_copy">Copy</string>
    <string name="title_chat">Send Private Messages</string>
</resources>