<!--
  ~ Copyright (C) 2014 ChatWing
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/online_users"
        android:title="@string/title_online_users"
        android:icon="@drawable/ic_action_group"
        app:showAsAction="always"/>
    <item android:id="@+id/share_chat_box"
        android:title="@string/title_share_chat_box"
        app:showAsAction="never"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>
    <item android:id="@+id/copy_alias"
        android:title="@string/title_copy_alias_current_chat_box"
        android:icon="@drawable/ic_action_copy_holo_dark"
        app:showAsAction="never"/>

</menu>
