<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:gravity="center_horizontal">

    <TextView
            android:id="@+id/ic_chatwing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ic_chatwing"
            android:textColor="@color/chatwing_icon_color"
            android:textSize="@dimen/chatwing_icon_text_size"/>

    <AutoCompleteTextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:selectAllOnFocus="true"/>

    <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:imeOptions="actionGo"/>

    <Button
            android:id="@+id/btn_login_chatwing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_login_chatwing"
            android:textSize="@dimen/authenticate_button_text_size"
            android:textStyle="bold"
            style="@style/ButtonChatWing"/>

    <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_min_height"
            android:lines="1"
            android:gravity="center_vertical"
            android:text="@string/title_forgot_password"
            android:textColor="@color/main_color"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
</LinearLayout>